Online shopping HTML.CSS/JavaScript - Created pies page

--- a/Online shopping/pies.html
+++ b/Online shopping/pies.html
@@ -3,9 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
+    <title>Pies | Bethany's Pie Shop</title>
+    <style>
+        h1 {
+            font-size: 3em;
+            margin-top: 0.5em;
+        }
+
+        .banner {
+            max-width: 100%;
+        }
+
+        .sub-title{
+            background-color: #fff;
+            font-size: 1.5em;
+            padding: 10%;
+        }
+    </style>
 </head>
 <body>
+
+<header>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="pies.html">Pies</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<main>
+    <aside><img src="images/logo.png" alt="Bethany's Pie Shop" /></aside>
+    <article>
+       <section class="columns-desktop">
+
+           <div class="pie">
+               <img src="images/apple-pie.png" alt="Apple Pie" />
+               <div class="columns">
+                   <div class="title">Apple Pie</div>
+                   <div class="price">$12.95</div>
+               </div>
+               <p class="desc">Our famous apple pie</p>
+               <button data-order="apple-pie">Order</button>
+           </div>
+
+           <div class="pie">
+               <img src="images/cherry-pie.png" alt="Chery Pie" />
+               <div class="columns">
+                   <div class="title">Cherry Pie</div>
+                   <div class="price">$15.95</div>
+               </div>
+               <p class="desc">A summer classic!</p>
+               <button data-order="cherry-pie">Order</button>
+           </div>
+
+       </section>
+    </article>
+</main>
+
+<footer>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="pies.html">Pies</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</footer>
+
 
 </body>
 </html>
